2014-07-06 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/build-register-db.pl: Updated with SFR bits.

2014-07-04 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/build-register-db.pl: New tool to build a SFR database.

	* tools/device-help.pl, tools/device-manager.pl:
	  Updated to extended px structure.

	* tools/cfg-import.py: Changed "unsigned" to "unsigned int".

2014-06-30 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/cfg-import.py: typo

2014-06-28 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Updated according to the struct px.

2014-06-21 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: Added boundaries of the idlocs and eeprom.

2014-06-04 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Added the "Common SFRs" tab.

2014-06-02 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: More precise RAM size and added the PIC17 family.

2014-05-31 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Updated according to http://validator.w3.org.

2014-05-24 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: updated

2014-05-01 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: updated

2014-05-01 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Updated the style sheet and minor error corrections.

2013-08-09 Borut Razem <borut.razem@users.sourceforge.net>
	* build/mingw/do_setup.sh, build/mingw/make-mingw:
	  revived the Linux cross compilation build

2013-05-21 Borut Razem <borut.razem@users.sourceforge.net>
	* scripts/build/mingw/gputils.nsi: added RequestExecutionLevel admin

2013-05-14 Borut Razem <borut.razem@users.sourceforge.net>
	* tools/device-help.pl: take the svn revision number from the gputils
	  soruce directory instead from the repository root;
	  use svnversion instead svn info to get the current svn revision

2013-03-08 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: bugfix
